# sonibox

./: .gitignore  .gitmodules  LICENSE  README.md
pcb/: fp-info-cache  sonibox.kicad_pcb  sonibox.kicad_prl  sonibox.kicad_pro  sonibox.kicad_sch
pcb/jlcpcb/: project.db
pcb/jlcpcb/gerber/: sonibox-CuBottom.gbr  sonibox-CuTop.gbr  sonibox-EdgeCuts.gbr  sonibox-MaskBottom.gbr  sonibox-MaskTop.gbr  sonibox-NPTH.drl  sonibox-PTH.drl  sonibox-SilkBottom.gbr  sonibox-SilkTop.gbr
pcb/jlcpcb/production_files/: BOM-sonibox.csv  CPL-sonibox.csv
sonibox-fw/: sonibox-fw.h  sonibox-fw.ino
sonibox-rs/: Cargo.toml
sonibox-rs/src/: buttons.rs  leds.rs  main.rs  player.rs  rfid.rs  sleep.rs  tags.rs
