[package]
name = "sonibox-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-embedded-hal    = { version = "0.3.0", features = ["defmt"] }
embassy-futures         = { version = "0.1.1", features = ["defmt"] }
embassy-sync            = { version = "0.6.2", features = ["defmt"] }
embassy-executor        = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time            = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp              = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt             = "0.7.0"

defmt                   = "1.0.1"
defmt-rtt               = "1.0.0"
panic-probe             = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic         = { version = "1.5", features = ["critical-section"] }
static_cell             = "2.1.0"

dfplayer-async          = { version = "0.5.0", features = ["defmt"] }
mfrc522                 = "0.8.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
